syntax = "proto3";
package v1;



message TextToSpeechMessage {
    string data = 1;
    string response =2;
    string gender = 3; 
    bool play = 4;
}

service TextToSpeech {
    rpc GenerateSpeech(TextToSpeechMessage) returns (TextToSpeechMessage){}
}